tests/PhiCore/compile_failure/src/iterator/iter_reference/non_referenceable.fail.cpp
#include <phi/iterator/iter_reference.hpp>

int main()
{
    phi::iter_reference_t<void> t;
}
